# es4forensics

./: Cargo.toml  README.md
src/: cli.rs  es4forensics.rs  evidence_item_v1.rs  evidence_object_v1.rs  index.rs  index_builder.rs  lib.rs  protocol.rs  stream_source.rs  timestamp.rs
src/ecs/: _ecs.rs  ecs_builder.rs  file.rs  mod.rs  timeline_object.rs
src/ecs/log/: event_level.rs  log.rs
src/ecs/objects/: ad_object.rs  mod.rs  ntfs_file.rs  posix_file.rs  registry_key.rs  simple_event.rs  windows_event.rs
src/objects/: ad_object.rs  macb.rs  mod.rs  ntfs_file.rs  posix_file.rs  windows_event.rs
src/utils/: json.rs
tests/: docker-compose.yml  test_bodyfile.rs  test_index_creation.rs
tests/common/: credentials.rs
tests/data/: sample.bodyfile.json
